--- a/spring-boot-form-submit-example/pom.xml
+++ b/spring-boot-form-submit-example/pom.xml
@@ -20,6 +20,20 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.8</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
 		<!-- Provided -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>                <!-- for tomcat web container -->
@@ -31,6 +45,13 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<scope>runtime</scope>     <!-- in my case provided not working so write runtime -->
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+
 		<dependency>
 			<groupId>javax.servlet</groupId>           <!-- for jsp jstl tags -->
 			<artifactId>jstl</artifactId>
